<resources>
    <string name="app_name">CrudApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CrudApp</string>
    <string name="nav_header_subtitle">juelgarcia98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_registar_user">Registrar Usuario</string>
    <string name="menu_consultar_user">Consultar Usuario</string>
    <string name="menu_consultar_user_url">Consultar Usuario Url</string>
    <string name="menu_consultar_user_list">Consultar Lista Usuario</string>
    <string name="menu_consultar_user_list_image">Consultar Usuarios Imagen</string>
    <string name="menu_developer">Developer</string>
    <string name="menu_modificar_eliminar">Actualizar y eliminar usuarios</string>
    <string name="menu_consultar_user_list_image_url">Consultar Usuarios Imagen Url</string>
    <string name="home_second">Home Second</string>s

    <!-- Home -->
    <string name="titleHome">Ejemplo de App con WebServices</string>

    <!-- Registrar Usuario -->
    <string name="titleRegistro">Registrar Usuarios</string>
    <string name="documentoRegistro">Documento</string>
    <string name="nombreRegistro">Nombre</string>
    <string name="profesionRegistro">Profesión</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="passwordRegistro">Contraseña</string>
    <string name="correoRegistro">Email</string>

    <!-- Consultar Usuario -->
    <string name="titleConsulta">Consultar Usuarios</string>
    <string name="titleConsultaUrl">Consultar Usuarios Url</string>
    <string name="documentoConsulta">Documento</string>
    <string name="nombreConsulta">Nombre</string>
    <string name="profesionConsulta">Profesión</string>
    <string name="correoConsulta">Email</string>
    <string name="btnConsultar">Consultar</string>

    <!-- Consultar Lista Usuarios -->
    <string name="documentoLista">Documento:</string>
    <string name="nombreLista">Nombre:</string>
    <string name="profesionLista">Profesión:</string>
    <string name="correoLista">Correo:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Modificar eliminar-->
    <string name="titleUpdate">Modificar y Eliminar Usuarios</string>
    <string name="documentoUpdate">Documento</string>
    <string name="nombreUpdate">Nombre</string>
    <string name="profesionUpdate">Profesión</string>
    <string name="correoUpdate">Email</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="btnDelete">Eliminar</string>
    <string name="btnConsultarUpdate">S</string>

    <!-- Global -->
    <string name="protocol">http</string>
    <string name="ip">192.168.100.44</string>
    <string name="port">3000</string>

</resources>
