<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_registar_user"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/menu_registar_user" />
        <item
            android:id="@+id/nav_consultar_user"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_consultar_user" />
        <item
            android:id="@+id/nav_consultar_user_url"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_consultar_user_url" />
        <item
            android:id="@+id/nav_consultar_user_list"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_consultar_user_list" />
        <item
            android:id="@+id/nav_consultar_user_list_image"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_consultar_user_list_image" />
        <item
            android:id="@+id/nav_consultar_user_list_image_url"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_consultar_user_list_image_url" />
        <item
            android:id="@+id/nav_modificar_eliminar"
            android:icon="@drawable/ic_update_grey_24dp"
            android:title="@string/menu_modificar_eliminar" />
    </group>
    <item android:title="Información">
        <menu>
            <item
                android:id="@+id/nav_desarrollador"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="Desarrollador" />
        </menu>
    </item>
</menu>
