<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.ConsultarUsuarioFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleConsulta"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/documentoConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/documentoConsulta"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/nombreConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombreConsulta"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/correoConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correoConsulta"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/profesionConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profesionConsulta"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/img_base"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        />



</RelativeLayout>