<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.ModificarEliminarFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleConsultaUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleUpdate"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/documentoUpdate"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/documentoUpdate"
                    android:layout_marginBottom="10dp"
                    />
                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_search_white_24dp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/nombreUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreUpdate"
                android:layout_marginBottom="2dp"
                />
            <EditText
                android:id="@+id/correoUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correoUpdate"
                android:layout_marginBottom="2dp"
                />
            <EditText
                android:id="@+id/profesionUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profesionUpdate"
                android:layout_marginBottom="2dp"
                />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imagenUpdate"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/img_base"
        android:layout_below="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btnUpdate"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btnDelete"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/btnUpdate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>