<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/relative"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrarUsuarioFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/registroTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleRegistro"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_below="@+id/linear"
        android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/registroDocumento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/documentoRegistro"
                        android:layout_marginTop="10dp"
                        android:layout_weight="3"
                        />
                    <Button
                        android:id="@+id/btnFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FOTO"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFFFFF"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        />
                </LinearLayout>
                <EditText
                    android:id="@+id/registroCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correoRegistro"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/registroPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordRegistro"
                    android:layout_marginTop="10dp"
                    />

                <EditText
                    android:id="@+id/registroNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreRegistro"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/registroProfesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profesionRegistro"
                    android:layout_marginTop="10dp"
                    />
                <ImageView
                    android:id="@+id/registroImagen"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/img_base"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/btnRegistrar"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

</RelativeLayout>