<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/documentoLista"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/listaDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Documento"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreLista"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/listaNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/correoLista"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/listaCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Correo"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/profesionLista"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/listaProfesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profesión"
            android:textSize="15sp"
            />
    </LinearLayout>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        />

</LinearLayout>